fix shop alignment

--- a/public/css/fetish-priest.css
+++ b/public/css/fetish-priest.css
@@ -204,7 +204,7 @@ body {
 .logo {
 	position: relative;
 	float: right;
-	margin-top: 29vh;
+	margin-top: 28.72vh;
 	margin-right: 0.5vw;
 	z-index: 1000;
 }
@@ -451,7 +451,7 @@ a.yellow {
 	float: right;
 	display: none;
 	margin-right: -3.9vw;
-	margin-top: 29vh;
+	margin-top: 28.72vh;
 }
 
 #mc_embed_signup input {
